manifests/azure-lb.yml
apiVersion: v1
kind: Service
metadata:
    name: azure-lb
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: ingress-nginx
