manifests/php-app01.yml
apiVersion: v1
kind: Service
metadata:
  name: php-app01
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: php-app01
---
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: php-app01
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: php-app01
    spec:
      containers:
        - name: lijumcdockerphphelloworld 
          image: mycontainerregistryliju.azurecr.io/lijumcdockerphphelloworld 
          ports:
          - containerPort: 80
