manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: php-app
spec:
    ports:
    - port: 80
    selector:
        app: lijumcdockerphphelloworld
