manifests/ingress-rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: contoso.com
    http:
      paths:
      - backend:
          serviceName: php-app01
          servicePort: 80
